--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,5 @@
   "python.testing.pytestArgs": ["."],
   "python.testing.unittestEnabled": true,
   "python.testing.pytestEnabled": false,
-  "python.testing.unittestArgs": ["-v", "-s", "./tests", "-p", "*test.py"]
+  "python.testing.unittestArgs": ["-v", "-s", "./tests", "-p", "*test*.py"]
 }
